[package]
name = "broker_dns"
version = "0.1.0"
edition = "2024"

[dependencies]
arti = { version = "1.4.6", features = ["onion-service-client"] }
arti-client = "0.33.0"
domain = { version = "0.11.0", features = ["resolv"] }
http-body-util = "0.1.3"
httparse = "1.10.1"
hyper = { version = "1.6.0", features = ["client", "server"] }
hyper-util = { version = "0.1.16", features = ["full"] }
reqwest = "0.12.14"
tokio = { version = "1.47.1", features = ["macros", "net"] }
tor-rtcompat = "0.33.0"
